chore: remove sync scope
